appId: org.wikimedia.wikipedia
---
- launchApp:
    clearState: true
- assertVisible: "Next"
- repeat:
    times: 5
    while:
      notVisible: "Get started"
    commands:
      - swipe:
          direction: LEFT
          duration: 400
      - waitForAnimationToEnd
- tapOn: Get started
- tapOn:
    text: "Non existent view"
    optional: true
